@@ -45,26 +45,31 @@
             </Grid>
             <Rectangle HorizontalAlignment="Stretch" Height="3" Fill="DarkGreen" />
             <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Label Padding="2,2" Grid.Row="0" Grid.Column="0" Content="N:" HorizontalAlignment="Right"/>
-                    <Label Padding="2,2" Grid.Row="0" Grid.Column="1" ToolTip="Measured noise floor"
-                           Content="{Binding NoiseFloorView}" />
-                    <Label Padding="2,2" Grid.Row="0" Grid.Column="2" ToolTip="Measured noise floor"
-                           Content="{Binding NoiseFloorV, Converter={StaticResource VoltFormatter}}" />
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Label Padding="2,2" Grid.Row="0" Grid.Column="0" Content="N:" HorizontalAlignment="Right"/>
+                <Label Padding="2,2" Grid.Row="0" Grid.Column="1" ToolTip="Measured noise floor"
+                        Content="{Binding NoiseFloorView}" />
+                <Label Padding="2,2" Grid.Row="0" Grid.Column="2" ToolTip="Measured noise floor"
+                        Content="{Binding NoiseFloorV, Converter={StaticResource VoltFormatter}}" />
 
-                    <Label Padding="2,2" Grid.Row="1" Grid.Column="0" Content="IMD:" HorizontalAlignment="Right"/>
-                    <Label Padding="2,2" Grid.Row="1" Grid.Column="1" ToolTip="Total intermodulation distortion"
-                           Content="{Binding ThdIndB, Converter={StaticResource DoubleIntlConverter}, ConverterParameter=-2}" ContentStringFormat="{}{0} dB"/>
-                <Label Padding="2,2" Grid.Row="1" Grid.Column="2" Content="{Binding ThdInPercent, Converter={StaticResource DoubleIntlConverter}, ConverterParameter=-5}" ContentStringFormat="{}{0} %"/>
-               
+                <Label Padding="2,2" Grid.Row="1" Grid.Column="0" Content="IMD:" HorizontalAlignment="Right"/>
+                <Label Padding="2,2" Grid.Row="1" Grid.Column="1" ToolTip="Total intermodulation distortion"
+                        Content="{Binding ThdIndB, Converter={StaticResource DoubleIntlConverter}, ConverterParameter=-2}" ContentStringFormat="{}{0} dB"/>
+                <Label Padding="2,2" Grid.Row="1" Grid.Column="2" >
+                    <MultiBinding Converter="{StaticResource VToPctConverter}">
+                        <Binding Path="ThdInPercent"/>
+                        <Binding Path="ThdInV"/>
+                        <Binding Path="ShowDataPercents"/>
+                    </MultiBinding>
+                </Label>
             </Grid>
             <Rectangle HorizontalAlignment="Stretch" Height="3" Fill="DarkGreen" />
             <Grid>
