@@ -5,6 +5,9 @@ This changelog shows the changes made for each version
 v 1.1.21
 - add a couple of fields to Settings display
 - improve localization of values shown in data summary box and entries
+- support flip of percent/v in data summary box also when stopped and in ghosts
+- slight change to thd calculation for spectrum
+- change intermodulation distortion summary values to the right values
 v 1.1.20
 - add microphone compensation to response test and settings
 	this uses linear frequency interpolation of the loaded compensation file
